--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Expert Data Dashboard</title>
+    <!--- Bootstrap Link --->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body >
+
+
+<div class="jumbotron text-center"  >
+  <h1>Expert Data Dashboard</h1><br>
+</div>
+
+<div class="container" >
+  <div class="text-center" style="font-size: large">
+    <form method = "POST">
+        {% csrf_token %}
+        {{ form}}
+        <input type = "submit" value = "Submit" class="btn btn-danger" style="height: 40px">
+    </form>
+  </div>
+</div>
+
 
 </body>
 </html>
