downloading file - done

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body >
-
-
 <div class="jumbotron text-center"  >
   <h1>Expert Data Dashboard</h1><br>
-    <p> Please write the link of datasets, either csv link or json format dataset </p>
+    <p> Please write the direct download link of datasets, either csv format or json format dataset. </p>
 </div>
 
 <div class="container" >
@@ -26,7 +24,6 @@
     </form>
   </div>
 </div>
-
 
 </body>
 </html>
