--- a/templates/result.html
+++ b/templates/result.html
@@ -5,28 +5,83 @@
     <title>Expert Data Dashboard</title>
     <!--- Bootstrap Link --->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+
+    <!--- link css --->
 </head>
 <body>
-<div class="container-fluid">
-
-    <div class="row" style="height: 100%; ">
-        <div class="col-sm-4" style="background-color: lightgray; height: 800px;  width: 20%" >
-            <h4>Please select the specification</h4><br><br>
-                <form method = "GET">
-                    {{ form }}
-                    <input type = "submit" value = "Ready!" class="btn btn-danger" style="height: 40px; width: 90%; margin-top: 20px">
+<div class="container-fluid" >
+    <!----- Main section ------>
+    <div class="row" >
+        <!----- Side bar menu ------>
+        <div class="col-sm-4" style="background-color: lightgray; height: 684px;  width: 20%" >
+            <!----- Header Logo ------>
+            <h2 style="margin-top: 30px; color: darkslategray; border-bottom: 2px black solid">Expert Data Dashboard</h2><br>
+            <label>Please write your specifications!</label> <br>
+                <!----- Input form ------>
+                <form method = "GET" style="font-size: large; ">
+                    <!----- Input form columns name ------>
+                    <div  style="margin: 10px; ">
+                         {{ form.columns_field.label }}
+                         {{ form.columns_field }} <br><br>
+                    </div>
+                    <!----- Input form vizualization style------>
+                    <div  style="margin: 10px;">
+                         {{ form.vizualization_field.label }}
+                         {{ form.vizualization_field }}<br><br>
+                    </div>
+                    <!----- Input form button ------>
+                    <input type = "submit" value = "Ready!" class="btn btn-danger" style="height: 40px; width: 90%; font-size: medium; margin-top: 20px">
                 </form>
         </div>
+        <!----- Main section ------>
         <div class="col-sm-8">
-            <h1>Something to bulshit</h1>
-            Dashboard - this is large
+            <div class="row">
+                <!----- Title ------>
+                <div>
+                     <h1>Something to bullshit</h1>
+                    <p>Dashboard - this is large</p>
+                </div>
+                <!----- Chart   ------>
+                <div style="width: 70%; height: 50%; margin: 30px;">
+                     <canvas id="pie-chart"></canvas>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
+<script>
+    colorArray = [];
+    while (colorArray.length < 1000)
+    {
+        colorArray.push("#" + ((1<<24)*Math.random() | 0).toString(16));
+    }
+
+    new Chart(document.getElementById("pie-chart"), {
+    type: 'polarArea',
+    data: {
+      labels:  ['12','13','14','15'],
+      datasets: [{
+        label: "",
+        backgroundColor: colorArray,
+          borderWidth: colorArray,
+          borderColor: colorArray,
+        data: ['12','13','14','15']
+      }]
+    },
+    options: {
+      title: {
+        display: true,
+        text: 'Visualization'
+      }
+    }
+});
+
+    </script>
 
 </body>
 </html>
