--- a/templates/result.html
+++ b/templates/result.html
@@ -17,7 +17,7 @@
     <!----- Main section ------>
     <div class="row" >
         <!----- Side bar menu ------>
-        <div class="col-sm-4" style="background-color: lightgray; height: 684px;  width: 20%" >
+        <div class="col-sm-4" style=" padding: 10px; background-color: lightgray; height: 684px;  width: 20%" >
             <!----- Header Logo ------>
             <h2 style="margin-top: 30px; color: darkslategray; border-bottom: 2px black solid">Expert Data Dashboard</h2><br>
             <label>Please write your specifications!</label> <br>
@@ -39,9 +39,9 @@
         </div>
         <!----- Main section ------>
         <div class="col-sm-8">
-            <div class="row">
+            <div class="row" style="margin: 10px;">
                 <!----- Title ------>
-                <div>
+                <div style="padding: 5px;">
                      <h1>Something to bullshit</h1>
                     <p>Dashboard - this is large</p>
                 </div>
