--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     <!----- Main section title ------>
     <div class="jumbotron text-center" >
         <h1>Expert Data Dashboard</h1><br>
-        <p> Please write the direct download link of datasets, either csv format or json format dataset. </p>
+        <label> Please write the direct download link of datasets, either csv format or <label style="text-decoration: line-through;">json format</label> dataset. </label>
     </div>
 
     <!----- Input url section ------>
