--- a/templates/result.html
+++ b/templates/result.html
@@ -43,10 +43,10 @@
                 <!----- Title ------>
                 <div style="padding: 5px;">
                      <h1>Data through URLs with Counter collector</h1><br>
-                    <p>Visualization format - {{ vizualization_default }}</p>
+                    <p>Visualization format - <label style="color: darkmagenta">{{ vizualization_default }}</label></p>
                 </div>
                 <!----- Chart   ------>
-                <div style="width: 70%; height: 50%; margin: 30px;">
+                <div style="margin: 20px;">
                      <canvas id="pie-chart"></canvas>
                 </div>
             </div>
