--- a/templates/result.html
+++ b/templates/result.html
@@ -42,7 +42,7 @@
             <div class="row" style="margin: 10px;">
                 <!----- Title ------>
                 <div style="padding: 5px;">
-                     <h1>Data through URLs with Counter collector</h1><br>
+                     <h1>Data through with Counter collector</h1><br>
                     <p>Visualization format - <label style="color: darkmagenta">{{ vizualization_default }}</label></p>
                 </div>
                 <!----- Chart   ------>
